We have the basic scenario working where the active bundle sends the challenge message to the service.

--- a/ab_axis2_module/pom.xml
+++ b/ab_axis2_module/pom.xml
@@ -25,6 +25,16 @@
 			<artifactId>neethi</artifactId>
 			<version>3.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.ws.commons.axiom</groupId>
+			<artifactId>axiom-api</artifactId>
+			<version>1.2.13</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.ws.commons.axiom</groupId>
+			<artifactId>axiom-impl</artifactId>
+			<version>1.2.13</version>
+		</dependency>
 	</dependencies>
 
 	<build>
