--- a/scenarios/simple_service/client/pom.xml
+++ b/scenarios/simple_service/client/pom.xml
@@ -54,6 +54,10 @@
 		<artifactId>axis2-transport-http</artifactId>
 		<version>1.6.2</version>
 	</dependency>
-
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>1.3.2</version>
+	</dependency>
   </dependencies>
 </project>
