--- a/scenarios/simple_service/client/pom.xml
+++ b/scenarios/simple_service/client/pom.xml
@@ -59,5 +59,10 @@
 		<artifactId>commons-io</artifactId>
 		<version>1.3.2</version>
 	</dependency>
+	<dependency>
+		<groupId>edu.purdue.cs.absoa</groupId>
+		<artifactId>active_bundle</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</dependency> 
   </dependencies>
 </project>
