--- a/active_bundle/pom.xml
+++ b/active_bundle/pom.xml
@@ -7,12 +7,26 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>active_bundle</name>
 	<url>http://maven.apache.org</url>
+
+	<repositories>
+		<repository>
+			<id>wso2 repo</id>
+			<url>http://dist.wso2.org/maven2/</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.wso2.balana</groupId>
+			<artifactId>balana-distribution</artifactId>
+			<version>1.0.0-wso2v6</version>
 		</dependency>
 
 		<dependency>
@@ -27,19 +41,26 @@
 			<version>1.5.8</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.wso2.balana</groupId>
+			<artifactId>org.wso2.balana</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
-		        <groupId>org.apache.maven.plugins</groupId>
-		        <artifactId>maven-compiler-plugin</artifactId>
-		        <version>3.1</version>
-		        <configuration>
-		          <source>1.7</source>
-		          <target>1.7</target>
-		        </configuration>
-	      	</plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
