--- a/abrest/package.json
+++ b/abrest/package.json
@@ -7,6 +7,11 @@
   },
   "dependencies": {
     "express": "3.4.8",
-    "jade": "*"
+    "jade": "*",
+    "nodemon":"*",
+		"mysql" : "*",
+    "stylus": "*",
+    "nib": "*",
+    "java": "*"
   }
 }
