--- a/console/package.json
+++ b/console/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
     "mysql": "^2.5.4",
+    "request": "^2.51.0",
     "static-favicon": "~1.0.0"
   }
 }
