--- a/scenarios/online-shopping/shopping/package.json
+++ b/scenarios/online-shopping/shopping/package.json
@@ -6,13 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "~4.2.0",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
+    "portscanner": "^1.0.0",
     "request": "^2.51.0",
-    "static-favicon": "~1.0.0"
+    "static-favicon": "~1.0.0",
+    "thrift": "^0.9.2"
   }
 }
