--- a/scenarios/online-shopping/payment/package.json
+++ b/scenarios/online-shopping/payment/package.json
@@ -13,6 +13,7 @@
     "express": "~4.2.0",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
+    "mysql": "^2.5.4",
     "portscanner": "^1.0.0",
     "request": "^2.51.0",
     "static-favicon": "~1.0.0",
